# token-usage-tracker

./: README.md  pyproject.toml
.streamlit/: config.toml
docs/: db_schema.md
tests/: conftest.py  test_cline.py  test_codex.py  test_dashboard.py  test_dashboard_app.py  test_db_and_queries.py  test_incremental_ingest.py  test_parser_helpers.py  test_parsers.py  test_pricing.py  test_schema.py
tests/fixtures/claude_projects/-home-user-myrepo/: SESSION1.jsonl
tests/fixtures/claude_projects/-home-user-myrepo/SESSION1/subagents/: agent-AAA.jsonl
tests/fixtures/cline_tasks/taskA/: api_conversation_history.json  task_metadata.json  ui_messages.json
tests/fixtures/cline_tasks/taskB/: api_conversation_history.json  task_metadata.json  ui_messages.json
tests/fixtures/codex_sessions/2026/06/14/: rollout-2026-06-14T03-00-00-sess.jsonl
tokentracker/: cli.py  config.py  dashboard.py  db.py  ingest.py  models.py  pricing.py  pricing.toml  queries.py  schema.py
tokentracker/parsers/: base.py  claude_code.py  cline.py  codex.py
