[project]
name = "tokentracker"
version = "0.1.0"
description = "AIコーディングエージェント(Claude Code/Codex/Cline)のトークン消費をローカルログから集計・可視化する独立ツール"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.36",
    "duckdb>=1.0",
    "pandas>=2.0",
]
watch = [
    "watchdog>=4.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
tokentracker = "tokentracker.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tokentracker"]
# 単価 TOML を wheel に同梱する。
artifacts = ["tokentracker/pricing.toml"]
force-include = { "tokentracker/pricing.toml" = "tokentracker/pricing.toml" }

[tool.pytest.ini_options]
testpaths = ["tests"]
